<resources>
    <string name="app_name">taller zapatos</string>
    <string name="titulo">Venta de zapatos</string>
    <string name="genero">Genero</string>
    <string name="tipo">Tipo</string>
    <string name="marca">Marca</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total a pagar</string>
    <string-array name="lista_genero">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
    <string-array name="lista_tipo">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </string-array>
    <string-array name="lista_marca">
        <item>@string/nike</item>
        <item>@string/adiddas</item>
        <item>@string/puma</item>
    </string-array>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">clasico</string>
    <string name="nike">Nike</string>
    <string name="adiddas">Adiddas</string>
    <string name="puma">Puma</string>
    <string name="error">Debe digitar un numero</string>
    <string name="error2">No deben ser numero negativos</string>
</resources>
